discussion/kv_engine/144698/144698_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Make KV Bucket test shutdown/warmup cleanly

Change-Id: Ieedd3701e5289875a7190af49e62c770f2adcd30

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-01-29 09:10:32.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-29 09:38:45.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6813/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5393:49: error: too few arguments to function call, single argument "vbid" was not specified [clang-diagnostic-error]
    auto vb = engine->getKVBucket()->getVBucket();
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.h:226:5: note: "getVBucket" declared here
    VBucketPtr getVBucket(Vbid vbid) override {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5399:44: error: too few arguments to function call, single argument "vbid" was not specified [clang-diagnostic-error]
    vb = engine->getKVBucket()->getVBucket();
                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.h:226:5: note: "getVBucket" declared here
    VBucketPtr getVBucket(Vbid vbid) override {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5406:49: error: too few arguments to function call, single argument "vbid" was not specified [clang-diagnostic-error]
    auto vb = engine->getKVBucket()->getVBucket();
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.h:226:5: note: "getVBucket" declared here
    VBucketPtr getVBucket(Vbid vbid) override {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5412:44: error: too few arguments to function call, single argument "vbid" was not specified [clang-diagnostic-error]
    vb = engine->getKVBucket()->getVBucket();
                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.h:226:5: note: "getVBucket" declared here
    VBucketPtr getVBucket(Vbid vbid) override {
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6813/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5393:49:
error: too few arguments to function call, single argument "vbid" was not specified [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6813/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33255/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(5393): error C2660: "KVBucket::getVBucket": function does not take 0 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33255/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28610/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5393:49:
error: too few arguments to function call, single argument "vbid" was not specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28610/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8733/ : FAILURE

Compile error at [2021-01-29T09:23:28.315Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5393:49:
error: too few arguments to function call, single argument "vbid" was not specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8733/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16282/ : FAILURE

Compile error at [2021-01-29T09:12:30.745Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5393:49:
error: too few arguments to function call, single argument "vbid" was not specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16282/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7436/ : FAILURE

Compile error at [2021-01-29T09:13:23.095Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5393:49:
error: too few arguments to function call, single argument "vbid" was not specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7436/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8351/ : FAILURE

Compile error at [2021-01-29T09:27:42.330Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5393:49:
error: no matching function for call to ?KVBucket::getVBucket()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8351/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8477/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5349/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-02-03 19:00:08.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
